Fix boosted stat colouring in Webtiles (#6672, #6529).
This is a squashed version of the following patches:

Colour boosted/lowered defense stats in WebTiles

Colour SH correctly when incapacitated in WebTiles

Minor code cleanup in player.js

Don't change shield color when held by a mimic

Show stats as light red until they have recovered

--- a/crawl-ref/source/webserver/game_data/static/style.css
+++ b/crawl-ref/source/webserver/game_data/static/style.css
@@ -56,6 +56,13 @@ body {
     color: #729fcf; /* lightblue */
 }
 
+.degenerated_defense {
+    color: #a40000; /* red */
+}
+.boosted_defense {
+    color: #729fcf; /* lightblue */
+}
+
 
 .bar span {
     display: inline-block;
